2005-03-02  Esteban Sanchez  <steve-o@linups.org>

	* src/comic-simple.[ch]: Added an attribute that indicates if the comic
	restrictions. It's an array[8] of boolean values, the index is a
	GDateWeekday.
	
	* src/buoh.c (buoh_load_supported_comic_list): Load the restrictions from
	XML file.
	- Some memory liberated.

2005-02-28  Esteban Sanchez  <steve-o@linups.org>

	* help/comics.txt: Deleted

	* data/comics.xml: Added all the comics that were on comics.txt
	
	* interfaces/buoh.glade: Added a button that shows the current page (in
	comic simples will be the date) of the current comic.

	* src/comic.[ch], comic-simple.[ch]: Added a function that returns the
	current page (date).
	
	* src/buoh.c: Code to show the page of the comic.

2005-02-25  Esteban Sanchez  <steve-o@linups.org>

	* data/comics.xml: Added a attribute id that identifies a comic.

	* src/comic.[ch]: added id attribute, get and set of this attribute.

	* src/callbacks.c: Moved a lot of functions that should be privates to
	buoh.c

	* src/buoh.c: buoh_gui_show_comic (ambiguous) renamed to loading_comic.
	Some functions commented. On exit the user comic list is saved to a XML
	file in home dir. Some code cleanup.

	* interfaces/buoh.glade: Added a Bookmarks menu. Removed some menu
	buttons.

	* help/comics.txt: Reviewed and edited to have generic uris.

	* help/comics.xml: Removed

2005-02-21  Esteban Sanchez  <steve-o@linups.org>

	* src/buoh.c: Hide the tabs of the notebook in the code, it's just 
	to see the tabs in the Glade editor.

	* interfaces/buoh.glade: Changed the TextView to a GtkLabel because
	GtkLabel supports pango (text rendering) with easier methods.

2005-02-19  Esteban Sanchez  <steve-o@linups.org>

	* interfaces/buoh.glade: Added a notebook widget that holds in
	one tab the GtkImage, and in another tab a GtkTextView. In this
	TextView there are a welcome message.
		
	* src/buoh.c: When loading buoh show the welcome message and when
	a comic is activate show the image.